# tinymux-next

./: .dockerignore  .gitignore  README.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/game/: netmux.conf  ws.conf
docker/game/scripts/: echo.sh  exit_code.sh  upper.sh
docs/: .execscript.md.swp  execscript.md  httpclient.md  jsonparse.md  testing.md  webserver-integration.md  websocket.md
mux/docs/: CREDITS
mux/game/text/: wizhelp.txt
mux/src/: .depend  Makefile  Makefile.in  autoconf.h  bsd.cpp  configure.ac  db_sqlite.cpp  db_sqlite.h  game.cpp  interface.h  netcommon.cpp  unsplit  ws.conf.example  ws_config.cpp  ws_config.h  ws_gmcp.cpp  ws_gmcp.h  ws_proto.cpp  ws_proto.h
mux/src/libmux.so.dSYM/Contents/: Info.plist
mux/src/libmux.so.dSYM/Contents/Resources/Relocations/aarch64/: libmux.so.yml
mux/src/modules/: .depend  Makefile  Makefile.in  autoconf.h  execscript.cpp  execscript.h  execscript_impl.h  http_logic.h  httpclient.cpp  httpclient.h  json_logic.h  jsonparse.cpp  jsonparse.h
mux/src/tests/: CMakeLists.txt  mock_httpd.py  mock_mux_server.h  mux_test_runner.py  test_execscript.cpp  test_httpclient.cpp  test_jsonparse.cpp  test_ws_gmcp.cpp  test_ws_proto.cpp  test_ws_tls.cpp
mux/src/tests/softcode/: test_execscript.mux  test_httpclient.mux  test_jsonparse.mux  testkit.mux
mux/src/tools/: autoconf.h
scripts/: run_tests.sh
